--- a/sso-web-dev.yml
+++ b/sso-web-dev.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: usian-sso-web
+  rabbitmq:
+    host: 192.168.25.129
+    username: zongyiwu
+    password: 123
+    virtual-host: /usian  
 server:
   port: 8098
 eureka:
